Removed striketrough since it was causing issues

--- a/projects/_posts/2024-09-09-graveler.md
+++ b/projects/_posts/2024-09-09-graveler.md
@@ -7,7 +7,7 @@ layout: post
 
 My entry into [the Graveler programming challenge](https://piped.video/watch?v=M8C8dHQE2Ro), has managed to simulate more than the required one billion runs in about 0.3 seconds on my laptop. This is the story of how I built it.
 
-## ~~shoddy~~ naive implementation
+## naive implementation
 
 Since I have been doing a bunch of programming in rust lately I decided to use it for this little challenge. Here is the naive implementation from [Austin](https://github.com/arhourigan/graveler/blob/main/graveler.py) translated to rust.
 
